[project]
name = "arkham-horror-mcp"
version = "0.1.0"
description = "MCP server for Arkham Horror data from arkhamcentral.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.6.0",]
[[project.authors]]
name = "netzerep"
email = "netzerep@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
arkham-horror-mcp = "arkham_horror_mcp:main"
